--- a/static/stylesheets/live.css
+++ b/static/stylesheets/live.css
@@ -486,6 +486,10 @@ body{
   align-items: stretch;
 }
 
+.announcement-details {
+  width: 100%;
+}
+
 .category-container {
   width: 3px;
   margin-right: 7px;
@@ -503,16 +507,16 @@ body{
   width: 100%;
 }
 
-.announcements-categories .category-0 {
+.announcements .category-0 .category-identifier {
   color: rgb(255, 0, 0);
 }
-.announcements-categories .category-1 {
+.announcements .category-1 .category-identifier {
   color: rgb(247, 139, 49);
 }
-.announcements-categories .category-2 {
+.announcements .category-2 .category-identifier {
   color: rgb(255, 202, 11);
 }
-.announcements-categories .category-3 {
+.announcements .category-3 .category-identifier {
   color: rgb(0, 188, 212);
 }
 
