Added link to schedule on homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@
       creators and professionals. For newcomers and veterans alike, MHacks is a weekend experience you
       won’t want to miss.
       </p>
+      <h2 class="section-header">What is happening at MHacks?</h2>
+      <div class="row-container">
+          <a class="button-link" target="_blank" href="https://drive.google.com/file/d/0B4fSxuPetYFGWjNLSng1QVdVdm8/view" style="width: auto">See the Schedule</a>
+      </div>
     </div>
   </div>
 
