Added versioning for base and live css

--- a/templates/live.html
+++ b/templates/live.html
@@ -1,7 +1,7 @@
 {% extends 'basic_page.html' %}
 
 {% block headers %}
-    <link rel="stylesheet" media="all" href="{{ static('stylesheets/live.css') }}">
+    <link rel="stylesheet" media="all" href="{{ static('stylesheets/live.css') }}?v=2">
 {% endblock %}
 
 {% block basic_page_title %}
