Added sponsor logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -467,6 +467,10 @@
       <div><a target="_blank" href="https://www.paloaltonetworks.com/"><img
                               src="{{ static('assets/palo-alto-logo.png') }}" alt="Sponsor Logo - Palo Alto Networks"></a></div>
     </div>
+    <div class="logo-row small">
+      <div><a target="_blank" href="http://www.allhandsactive.org"><img
+                              src="{{ static('assets/aha_logo.png') }}" alt="Sponsor Logo - Aha! Maker Space"></a></div>
+    </div>
   </div>
 </div>
 </div>
