--- a/templates/live.html
+++ b/templates/live.html
@@ -54,6 +54,7 @@
     <div class="live-container" style="display:none">
         <div class="live-section" data-section="FAQ">{% include 'live_faqs.html' %}</div>
     </div>
+    <div style="display: block; height: 50px"></div>
 </div>
 </div>
 {% endblock %}
