--- a/static/stylesheets/live.css
+++ b/static/stylesheets/live.css
@@ -2,6 +2,20 @@ body{
   background-color: #e6f3f7;
 }
 
+.live-header {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.live-header-content {
+    width: calc(100vw - 100px);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px 0;
+    align-items: center;
+}
+
 .title-form {
 }
 
@@ -14,11 +28,14 @@ body{
 }
 
 .live-navbar {
-  width: 100%;
-  height: 60px;
+  width: calc(100vw - 100px);
+
+  background-color: rgba(0, 0, 0, 0.4);
+  margin: 50px auto 50px auto;
+  border-radius: 20px;
+  padding: 20px 5px;
 
   cursor: pointer;
-  background-color: salmon;
 
   display: flex;
   flex-direction: row;
@@ -28,34 +45,17 @@ body{
 }
 
 .live-navlink {
-  margin: 0 15px;
-  position: relative;
-  display: inline-block;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 0;
+  margin: 0 16px;
   color: white;
 }
 
 .live-navlink:hover, .live-navlink:focus {
-  color: white;
+  color: #fece2f;
   text-decoration: none;
-}
-
-.live-navlink::after {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background: #fff;
-  content: '';
-  opacity: 0;
-  transition: height 0.2s, opacity 0.2s, transform 0.2s;
-  transform: translateY(5px);
-}
-
-.live-navlink:hover::after, .live-navlink:focus::after {
-  height: 2px;
-  opacity: 1;
-  transform: translateY(1px);
 }
 
 .live-container{
@@ -142,18 +142,6 @@ body{
   }
 }
 
-@media only screen and (max-width: 550px){
-  .live-header {
-    height: 150px;
-  }
-  .header {
-    height: 90px;
-  }
-  #logo{
-    height: auto;
-    width: 60px;
-  }
-}
 
 /* ========== Schedule ========== */
 
@@ -265,10 +253,6 @@ body{
   border-top: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.live-section {
-  -webkit-backdrop-filter: blur(50px);
-}
-
 .events {
   position: relative;
 }
@@ -308,7 +292,7 @@ body{
   padding-bottom: 4px;
 }
 
-.event .category-identifier {
+.category-identifier {
   text-transform: uppercase;
   line-height: 1.1;
 }
@@ -572,7 +556,6 @@ body{
 }
 
 #countdown-container {
-  padding-right: 50px;
   width: 300px;
   display: flex;
   flex-direction: column;
@@ -608,11 +591,11 @@ body{
 
 @media only screen and (max-width: 550px) {
   .countdown span {
-    font-size: 12pt;
+    font-size: 16pt;
   }
 
   .countdown h3 {
-    font-size: 8pt;
+    font-size: 10pt;
   }
 }
 
@@ -822,4 +805,20 @@ body{
   .hardware-container {
     width: 100%;
   }
+}
+
+@media only screen and (max-width: 500px){
+    .live-header-content {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #countdown-container {
+        margin-top: 16px;
+        align-items: center;
+    }
+
+    .countdown h3 {
+        text-align: center;
+    }
 }
