--- a/templates/live.html
+++ b/templates/live.html
@@ -8,6 +8,19 @@
 {% endblock %}
 
 {% block content %}
+<div style="background-image:url({{ static('assets/live_bg_1.png') }}); background-size:cover; background-attachment:fixed;">
+
+<div class="live-header">
+    <div class="live-header-content">
+        <div class="live-header-logo">
+            <img src={{ static('assets/logo-white.png') }} width=200px  />
+        </div>
+        <div id="countdown-container">
+            {% include 'countdown.html' %}
+        </div>
+    </div>
+</div>
+
 <div class="live-navbar">
     <a class="live-navlink" data-section="Announcements">
         Announcements
@@ -24,8 +37,8 @@
     <a class="live-navlink" data-section="Hardware">
         Hardware
     </a>
-    <a class="live-navlink" data-section="FAQ">
-        FAQ
+    <a class="live-navlink" target="_blank" href="https://mhacks8.devpost.com">
+        Live Stream
     </a>
     <a class="live-navlink" target="_blank" href="https://mhacks8.devpost.com">
         Devpost
@@ -33,12 +46,6 @@
 </div>
 
 <div>
-    <div style="background-image:url({{ static('assets/live_bg_1.png') }}); background-size:cover; background-attachment:fixed;">
-    <div class="live-header">
-      <div id="countdown-container">
-          {% include 'countdown.html' %}
-      </div>
-    </div>
 
     <div class="live-container col-2-flex">
         <div class="live-section" data-section="Announcements">{% include 'announcements.html' %}</div>
