Small content changes

--- a/templates/mentorship.html
+++ b/templates/mentorship.html
@@ -3,18 +3,12 @@
         <h1>Mentorship</h1>
     </div>
     <div class="mentorship-container">
-        <h2>
-            Some resources to help you get started!
-        </h2>
-        <h3>
-            <a href="https://github.com/omkarmoghe/MH-Android-Workshop">Intro Android Workshop</a><br>
-            <a href="https://github.com/russellladd/BeaconRanger">Intro iOS Workshop</a><br>
-            <a href="https://drive.google.com/open?id=0B7ty8eTrsvjPUGlhcEVxT0phekk">Bot Making Workshop</a><br>
-        </h3>
+        <p>
+            Need a mentor? Head to the mentorship slack here: <br><a href="https://mhacks9live.slack.com" target="_blank">mhacks9live.slack.com</a><br>
+            See a Help Desk if you need to be added to the Slack.
+        </p>
         <div class="mentorship-block">
             <p>
-                Need a mentor? Head to the mentorship slack here: <br><a href="http://bit.ly/mhacks8" target="_blank">http://bit.ly/mhacks8/</a><br>
-                See a Help Desk if you need to be added to the Slack.
                 <br>We're using a mentorship platform called Minerva, and we're really excited to be piloting it!
             </p>
             <div class="faq-item mentorship-minerva">
@@ -41,7 +35,7 @@
         </div>
         <div class="mentorship-block">
             <p>
-                Need help finding a team? Check out <a href="https://www.venturestorm.com/users/sign_up?type=developer"
+                Need help finding a team? Check out <a href="https://www.venturestorm.com/hackathons/MHacks9"
                                                        target="_blank">Venturestorm's Team App</a>!
             </p>
         </div>
