--- a/templates/live.html
+++ b/templates/live.html
@@ -8,13 +8,15 @@
 {% endblock %}
 
 {% block content %}
-<div style="background-image:url({{ static('assets/live_bg_1.png') }}); background-size:cover; background-attachment:fixed;">
+<div class="live-background" style="background-image:url({{ static('assets/backgrounds/live_bg_' ~ hour ~ '.jpg') }}); background-size:cover; background-attachment:fixed;">
 
 <div class="live-header">
     <div class="live-header-content">
-        <div class="live-header-logo">
-            <img src={{ static('assets/logo-white.png') }} width=200px  />
-        </div>
+        <a href="/">
+            <div class="live-header-logo">
+                <img src={{ static('assets/logo-white.png') }} width=200px  />
+            </div>
+        </a>
         <div id="countdown-container">
             {% include 'countdown.html' %}
         </div>
