--- a/templates/header.html
+++ b/templates/header.html
@@ -19,13 +19,19 @@
                     <button type="submit" style="width: 110px;">Dashboard</button>
                 </form>
             {% endif %}
+            <form method="GET" action="{{ url_for('mhacks-live') }}">
+                <button type="submit">Live</button>
+            </form>
             <form method="POST" action="{{ url_for('mhacks-logout') }}">
                 {{ csrf_input }}
                 <button type="submit">Logout</button>
             </form>
         {% else %}
+            <form method="GET" action="{{ url_for('mhacks-live') }}">
+                <button type="submit">Live</button>
+            </form>
             <form method="GET" action="{{ url_for('mhacks-login') }}">
-                <button type="submit">Apply</button>
+                <button type="submit">Login</button>
             </form>
         {% endif %}
     </div>
@@ -38,13 +44,19 @@
                         <button type="submit" style="width: 110px;">Dashboard</button>
                     </form>
                 {% endif %}
+                <form method="GET" action="{{ url_for('mhacks-live') }}">
+                    <button type="submit">Live</button>
+                </form>
                 <form method="POST" action="{{ url_for('mhacks-logout') }}">
                     {{ csrf_input }}
                     <button type="submit">Logout</button>
                 </form>
             {% else %}
+                <form method="GET" action="{{ url_for('mhacks-live') }}">
+                    <button type="submit">Live</button>
+                </form>
                 <form method="GET" action="{{ url_for('mhacks-login') }}">
-                    <button type="submit">Apply</button>
+                    <button type="submit">Login</button>
                 </form>
             {% endif %}
         </div>
