More blurs in live page

--- a/static/stylesheets/live.css
+++ b/static/stylesheets/live.css
@@ -4,6 +4,7 @@ body{
 
 .live-header {
     background-color: rgba(0, 0, 0, 0.4);
+    -webkit-backdrop-filter: saturate(150%) blur(20px);
 }
 
 .live-header-content {
@@ -31,6 +32,7 @@ body{
   width: calc(100vw - 100px);
 
   background-color: rgba(0, 0, 0, 0.4);
+  -webkit-backdrop-filter: saturate(150%) blur(20px);
   margin: 50px auto 50px auto;
   border-radius: 20px;
   padding: 20px 5px;
